name: meosite
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10

executable site
  main-is: Site.hs
  build-depends:
      base == 4.*
    , hakyll == 4.7.*
    , hakyll-sass == 0.1.0
    , filepath >= 1.3 && < 1.5
    , process == 1.2.*
    , directory == 1.2.*
    , regex-compat == 0.92
  ghc-options: -threaded
  default-language: Haskell2010
