name: meosite
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10

executable site
  main-is: Site.hs
  build-depends:
      base == 4.*
    , hakyll >= 4.9.0 && < 5.0
    , hakyll-sass > 0.2.0 && < 1.0.0
    , filepath >= 1.3 && < 1.5
    , process >= 1.0 && < 1.7
    , directory >= 1.2 && < 1.4
    , regex-compat == 0.92
    , text-replace == 0.0.0.4
  ghc-options: -threaded
  default-language: Haskell2010

executable code-graph
  main-is: Main.hs
  build-depends:
      base == 4.*
    , bytestring >= 0.10.4.0
    , wreq >= 0.4.0.0
    , http-client >= 0.4.6 && < 0.6
    , aeson >= 0.11.0.0
    , text >= 1.1.1.0
    , lens >= 4.5
    , containers >= 0.5.6.0
    , unordered-containers >= 0.2.5.0
  hs-source-dirs: code-graph
  ghc-options:  -Wall -O2
  default-language: Haskell2010
