name: meosite
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10

executable site
  main-is: Site.hs
  build-depends:
      base == 4.*
    , hakyll >= 4.9.0 && < 5.0
    , hakyll-sass > 0.2.0 && < 1.0.0
    , filepath >= 1.3 && < 1.5
    , process >= 1.0 && < 1.7
    , directory >= 1.2 && < 1.4
    , regex-compat == 0.92
    , text-replace == 0.0.0.4
  ghc-options: -threaded
  default-language: Haskell2010
